@@ -12,6 +12,7 @@ version <next>:
 - 16-bit support in selectivecolor filter
 - OpenH264 decoder wrapper
 - MediaCodec hwaccel
+- True Audio (TTA) muxer
 
 
 version 3.1:
